// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthBar render correctly 1`] = `
<styled.div>
  <styled.div
    onClick={[Function]}
  >
    <styled.div>
      JUNE
    </styled.div>
    <styled.img
      alt="Calendar"
      src="calendar_icon.svg"
    />
  </styled.div>
</styled.div>
`;

exports[`MonthBar render when showing calendar 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.div
        $expanded={true}
        key="selMonth_0"
        onClick={[Function]}
        selected={false}
      >
        JUNE
      </styled.div>
      <styled.div
        $expanded={true}
        key="selMonth_1"
        onClick={[Function]}
        selected={true}
      >
        JULY
      </styled.div>
      <styled.div
        $expanded={true}
        key="selMonth_2"
        onClick={[Function]}
        selected={false}
      >
        AUGUST
      </styled.div>
    </styled.div>
    <styled.img
      alt="Calendar"
      src="calendar_icon.svg"
    />
  </styled.div>
</styled.div>
`;
